--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -480,6 +480,7 @@
   --basicConfirmModalColor: #000;
   --basicConfirmModalButton: #000;
   --basicConfirmModalButtonColor: #fff;
+  --basicConfirmModalInputBorderColor: #d4d3d3
 }
 [mode="dark"] {
   --basicModalBorderColor: #333;
@@ -491,6 +492,7 @@
   --basicConfirmModalColor: #FFF;
   --basicConfirmModalButton: #FFF;
   --basicConfirmModalButtonColor: #000;
+  --basicConfirmModalInputBorderColor: #333
 }
 .diary_entry_title {
   color: var(--basicColor);
@@ -588,7 +590,7 @@
   gap: 0.625rem;
   align-self: stretch;
   border-radius: 0.5rem;
-  border: 0.063rem solid var(--Gray-Gray-200, #d4d3d3);
+  border: 0.063rem solid var(--basicConfirmModalInputBorderColor);
   background-color: var(--basicInputBackgroundColor);
   outline: none;
   color: var(--basicColor);
@@ -626,7 +628,7 @@
   align-items: flex-start;
   gap: 0.625rem;
   align-self: stretch;
-  border: 0.063rem solid var(--Gray-Gray-200, #d4d3d3);
+  border: 0.063rem solid var(--basicConfirmModalInputBorderColor);
   border-radius: 0.5rem;
   background-color: var(--basicInputBackgroundColor);
   outline: none;
