--- a/04-01-diary/css/detail.css
+++ b/04-01-diary/css/detail.css
@@ -10,41 +10,49 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 64px;
-    margin: 0px 20px 40px;
+    gap: 4rem;
+    margin: 0 1.25rem 2.5rem;
 }
 
 .header {
     width: 100%;
-    height: 60px;
+    height: 3.75rem;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 700;
     text-align: left;
     color: #000000;
 }
 
+.desktop {
+    display: block;
+}
+  
+.mobile {
+    display: none;
+}
+
 .diary_layout {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 1.5rem;
     width: 100%;
 }
 
 .diary_title {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 1rem;
 }
 
 #title_details {
-    font-size: 22px;
+    font-size: 1.375rem;
     font-weight: 700;
-    padding-bottom: 12px;
-    border-bottom: 2px solid #000000;
+    padding-bottom: 0.75rem;
+    border-bottom: 0.125rem solid #000000;
 }
 
 .diary_info {
@@ -56,63 +64,63 @@ body {
 .diary_feeling {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 0.5rem;
 }
 
 #mood_image {
-    width: 32px;
-    height: 32px;
+    width: 2rem;
+    height: 2rem;
 }
 
 #show_mood {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
-    line-height: 24px;
+    line-height: 1.5rem;
 }
 
 .date {
     display: flex;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 400;
     color: #919191;
-    gap: 8px;
+    gap: 0.5rem;
 }
 
 #show_date {
     color: #919191;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 400;
 }
 
 .diary_content {
     display: flex;
     flex-direction: column;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
-    gap: 13px;
+    gap: 0.8125rem;
 }
 
 .show_content {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
 }
 
 .edit_button {
     display: flex;
     justify-content: end;
-    border-bottom: 1px solid #000000;
-    padding-bottom: 16px;
-    gap: 16px;
+    border-bottom: 0.0625rem solid #000000;
+    padding-bottom: 1rem;
+    gap: 1rem;
 }
 
 .edit {
     display: flex;
     align-items: center;
-    padding: 8px 10px;
-    font-size: 18px;
+    padding: 0.5rem 0.625rem;
+    font-size: 1.125rem;
     background-color: #ffffff;
-    border: 1px solid #D4D3D3;
-    border-radius: 8px;
+    border: 0.0625rem solid #D4D3D3;
+    border-radius: 0.5rem;
     color: #1C1C1C;
     cursor: pointer;
 }
@@ -125,37 +133,37 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 24px;
-    margin-top: -20px;
+    height: 1.5rem;
+    margin-top: -1.25rem;
 }
 
 .recollect_title {
     color: #000000;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 600;
-    padding-bottom: 13px;
+    padding-bottom: 0.8125rem;
 }
 
 .comment {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 16px;
+    gap: 1rem;
 }
 
 .comment_regist {
     display: flex;
-    width: 1400px;
-    height: 48px;
-    border: 1px solid #D4D3D3;
-    border-radius: 8px;
-    padding: 12px 16px;
-    gap: 10px;
+    width: 87.5rem;
+    height: 3rem;
+    border: 0.0625rem solid #D4D3D3;
+    border-radius: 0.5rem;
+    padding: 0.75rem 1rem;
+    gap: 0.625rem;
 }
 
 .comment_regist::placeholder {
     color: #ABABAB;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
 }
 
@@ -164,14 +172,14 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 51px;
-    height: 48px;
+    width: 3.1875rem;
+    height: 3rem;
     background-color: #000000;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 600;
     color: #ffffff;
-    border-radius: 8px;
-    gap: 10px;
+    border-radius: 0.5rem;
+    gap: 0.625rem;
 }
 
 #show_comment {
@@ -179,28 +187,77 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    margin-top: 4px;
+    margin-top: 0.25rem;
 }
 
 .show_comment {
     display: flex;
     flex-direction: row;
-    gap: 12px;
+    gap: 0.75rem;
     width: 100%;
     height: 100%;
-    border-bottom: 1px solid #E4E4E4;
-    padding: 16px 0px 32px;
-
+    border-bottom: 0.0625rem solid #E4E4E4;
+    padding: 1rem 0 2rem;
     color: #000000;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
 }
 
 #show_comment_date {
     display: flex;
-    height: 24px;
-    font-size: 16px;
+    height: 1.5rem;
+    font-size: 1rem;
     font-weight: 400;
     color: #777777;
+    gap: 0.5rem;
+}
+
+
+.copyboard {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    padding-right: 2px;
+}
+
+
+.clipboard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 8px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #1C1C1C;
+    border: none;
+    background-color: white;
+}
+
+.up_scroll {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    position: fixed;
+    bottom: 4rem;
+    right: 2rem;
+}
+
+#toast_message {
+    display: none;
+}
+
+.toast {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 700px;
+
+    width: 760px;
+    height: 56px;
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 500;
+    border-radius: 8px;
 }
