--- a/04-01-diary/css/edit.css
+++ b/04-01-diary/css/edit.css
@@ -10,73 +10,83 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 64px;
-    margin: 0px 20px 40px;
+    gap: 4rem;
+    margin: 0 1.25rem 2.5rem;
 }
 
 .header {
     width: 100%;
-    height: 60px;
+    height: 3.75rem;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 700;
     text-align: left;
     color: #000000;
 }
 
+.desktop {
+    display: block;
+}
+  
+.mobile {
+    display: none;
+}
+
 .edit_diary {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 1.5rem;
     width: 100%;
 }
 
 .select_mood {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 1.5rem;
+    width: 100%;
 }
 
 .select_mood_title {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 600;
 }
 
 .radio_group {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 1.25rem;
     width: 100%;
-    height: 24px;
+    height: 1.5rem;
 }
 
 .radio_button {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 8px;
-    font-size: 18px;
+    gap: 0.8rem;
+    font-size: 1.125rem;
     font-weight: 400;
 }
 
 .edit_part {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 1.5rem;
     color: #333333;
+    width: 100%;
 }
 
 .editing {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 0.8rem;
 }
 
 .input_label {
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 400;
     color: #333333;
 }
@@ -84,21 +94,21 @@ body {
 #edit_title {
     display: flex;
     width: 100%;
-    height: 48px;
-    border-radius: 8px;
-    border: 1px solid #D4D3D3;
-    padding: 12px 16px;
-    gap: 10px;
+    height: 3rem;
+    border-radius: 0.5rem;
+    border: 0.0625rem solid #D4D3D3;
+    padding: 0.75rem 1rem;
+    gap: 0.625rem;
 }
 
 #edit_content {
     display: flex;
     width: 100%;
-    height: 128px;
-    border-radius: 8px;
-    border: 1px solid #D4D3D3;
-    padding: 12px 16px;
-    gap: 10px;
+    height: 8rem;
+    border-radius: 0.5rem;
+    border: 0.0625rem solid #D4D3D3;
+    padding: 0.75rem 1rem;
+    gap: 0.625rem;
 }
 
 .edit_button {
@@ -106,36 +116,36 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 48px;
-    gap: 16px;
+    height: 3rem;
+    gap: 1rem;
 }
 
-.cancle {
-    width: 104px;
-    height: 48px;
+.cancel {
+    width: 6.5rem;
+    height: 3rem;
     background-color: #ffffff;
     color: #1C1C1C;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 600;
-    border: 1px solid #000000;
-    border-radius: 8px;
-    gap: 10px;
-    padding: 8px 10px;
+    border: 0.0625rem solid #000000;
+    border-radius: 0.5rem;
+    gap: 0.625rem;
+    padding: 0.5rem 0.625rem;
 }
 
 .edit {
-    width: 104px;
-    height: 48px;
+    width: 6.5rem;
+    height: 3rem;
     background-color: #000000;
     color: #F2F2F2;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 600;
     border: none;
-    border-radius: 8px;
-    gap: 10px;
-    padding: 8px 10px;
+    border-radius: 0.5rem;
+    gap: 0.625rem;
+    padding: 0.5rem 0.625rem;
 }
 
 .edit:hover {
@@ -146,38 +156,38 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 24px;
-    margin-top: -20px;
+    height: 1.5rem;
+    margin-top: -1.25rem;
 }
 
 .recollect_title {
     color: #000000;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 600;
-    padding-bottom: 13px;
+    padding-bottom: 0.8125rem;
 }
 
 .comment {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 16px;
+    gap: 1rem;
 }
 
 .comment_regist {
     display: flex;
-    width: 1400px;
-    height: 48px;
+    width: 87.5rem;
+    height: 3rem;
     background-color: #F2F2F2;
     border: none;
-    border-radius: 8px;
-    padding: 12px 16px;
-    gap: 10px;
+    border-radius: 0.5rem;
+    padding: 0.75rem 1rem;
+    gap: 0.625rem;
 }
 
 .comment_regist::placeholder {
     color: #ABABAB;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
 }
 
@@ -186,15 +196,15 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 51px;
-    height: 48px;
+    width: 3.1875rem;
+    height: 3rem;
     background-color: #C7C7C7;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 600;
     color: #F2F2F2;
     border: none;
-    border-radius: 8px;
-    gap: 10px;
+    border-radius: 0.5rem;
+    gap: 0.625rem;
 }
 
 #show_comment {
@@ -202,28 +212,27 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    margin-top: 4px;
+    margin-top: 0.25rem;
 }
 
 .show_comment {
     display: flex;
     flex-direction: row;
-    gap: 12px;
+    gap: 0.75rem;
     width: 100%;
     height: 100%;
-    border-bottom: 1px solid #E4E4E4;
-    padding: 16px 0px 32px;
-
+    border-bottom: 0.0625rem solid #E4E4E4;
+    padding: 1rem 0 2rem;
     color: #000000;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
 }
 
 #show_comment_date {
     display: flex;
-    height: 24px;
-    font-size: 16px;
+    height: 1.5rem;
+    font-size: 1rem;
     font-weight: 400;
     color: #777777;
-    gap: 8px;
+    gap: 0.5rem;
 }
