[240910] 윤준수 section08 과제

--- a/styles/diary.css
+++ b/styles/diary.css
@@ -717,6 +717,7 @@ textarea {
   min-width: 320px;
   max-width: 360px;
   border-radius: 100px;
+  align-self: stretch;
   gap: 0.5rem;
 }
 .search_wrapper input {
