--- a/myDiary.css
+++ b/myDiary.css
@@ -78,16 +78,53 @@ a { text-decoration: none;}
     }
 }
 
-.header__text {
+.header__title {
     height: 6rem;
     font-size: 2.4rem;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     margin: 2.4rem 0rem;
 
     @media (max-width: 375px) {
         font-size: 1.8rem;
     }
+}
+
+.title__text {
+    display: flex;
+    b { font-size: 2rem;}
+    p { font-size: 2rem;}
+}
+
+.container__mode {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+}
+
+.mode__toggle {
+    appearance: none;
+    width: 4.8rem;
+    height: 2.4rem;
+    border-radius: 1.2rem;
+    background-color: var(--chroma-mono10);
+}
+
+.mode__toggle::after {
+    display: block;
+    content: "";
+    width: 2rem;
+    height: 2rem;
+    background-color: var(--chroma-mono70);
+    border-radius: 100%;
+    margin: 0.2rem 0.4rem;
+    transition: 0.2s;
+}
+
+.mode__toggle:checked::after {
+    margin-left: 2.4rem;
+    transition: 0.3s;
 }
 
 .header__img {
@@ -469,6 +506,7 @@ a { text-decoration: none;}
     border-radius: 0.8rem;
     padding: 1.2rem 0.8rem;
     margin-bottom: 2.4rem;
+    background-color: var(--chroma-mono00);
 }
 
 .diary__contentInput {
@@ -561,37 +599,6 @@ a { text-decoration: none;}
     }
 }
 
-.container__mode {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 0.8rem;
-}
-
-.mode__toggle {
-    appearance: none;
-    width: 4.8rem;
-    height: 2.4rem;
-    border-radius: 1.2rem;
-    background-color: var(--chroma-mono00);
-}
-
-.mode__toggle::after {
-    display: block;
-    content: "";
-    width: 2rem;
-    height: 2rem;
-    background-color: var(--chroma-mono70);
-    border-radius: 100%;
-    margin: 0.2rem 0.4rem;
-    transition: 0.2s;
-}
-
-.mode__toggle:checked::after {
-    margin-left: 2.4rem;
-    transition: 0.3s;
-}
-
 /* modal style */
 .container__modal {
     display: flex;
@@ -661,6 +668,7 @@ a { text-decoration: none;}
     border: 0.2rem solid var(--chroma-mono30);
     padding: 1.2rem 1.6rem;
     margin-bottom: 2.4rem;
+    background-color: var(--chroma-mono00);
 }
 
 .content__input {
