--- a/homework/diary/index.css
+++ b/homework/diary/index.css
@@ -30,7 +30,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: 16px; /* 88.889% */
-    letter-spacing: -0.18px;
+    letter-spacing: -0.1792px;
     margin: 24px 0;
 }
 
@@ -67,15 +67,12 @@
 .CSS_감정선택상자 {
     width: 1168px;
     margin-bottom: 42px;
-    /* display: flex;
-    justify-content: flex-start;
-    align-items: center; */
-    /* align-self: stretch; */
 }
 
 #CSS_감정선택상자아이디 {
     width: 120px;
     height: 32px;
+    border-radius: 8px;
 }
 
 .CSS_보관함리스트_메뉴 {
@@ -113,6 +110,15 @@
     height: 373px;
     display: flex;
     flex-direction: column;
+    position: relative; /* ??? */
+    /* transition: 0.5s; */
+}
+
+.CSS_메인왼쪽_카드:hover {
+    cursor: pointer;
+    /* filter: blur(3px);
+    width: 110%;
+    height: 110%; */
 }
 
 .CSS_일기사진 {
@@ -123,14 +129,23 @@
 .CSS_기분이미지 {
     width: 100%;
     height: 100%;
-    transition: 0.5s;
 }
 
-.CSS_기분이미지:hover {
+/* .CSS_기분이미지:hover {
     cursor: pointer;
     filter: blur(3px);
     width: 110%;
     height: 110%;
+} */
+
+.CSS_닫힘버튼 {
+    position: relative;
+    width: 24px;
+    height: 24px;
+    top: 25px;
+    left: 350px;
+    z-index: 90;
+    cursor: pointer;
 }
 
 .CSS_메인왼쪽_카드_디테일 {
@@ -147,7 +162,7 @@
     font-style: normal;
     font-weight: 600;
     line-height: 20px; /* 142.857% */
-    letter-spacing: -0.14px;
+    letter-spacing: -0.1408px;
 }
 
 .CSS_메인왼쪽_카드_디테일_날짜 {
@@ -156,7 +171,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 24px; /* 171.429% */
-    letter-spacing: -0.14px;
+    letter-spacing: -0.1408px;
 }
 
 .CSS_메인왼쪽_카드_디테일_멘트 {
@@ -170,17 +185,33 @@
     font-style: normal;
     font-weight: 700;
     line-height: 24px; /* 133.333% */
-    letter-spacing: -0.18px;
+    letter-spacing: -0.1792px;
 }
 
 .CSS_메인오른쪽 {
+    /* background-color: red; */
+
     width: 360px;
     height: 604px;
     padding: 24px;
     border-radius: 16px;
     border: 1px solid var(--Gray-Gray-200, #d4d3d3);
     background: var(--Gray-W, #fff);
+    z-index: 999; /*카드 */
     /* margin: 0 0 0 24px; */
+    /* position: relative; */
+}
+
+.CSS_플로팅버튼 {
+    /* width: 20px; */
+    position: fixed;
+    background-repeat: no-repeat;
+    top: 1150px;
+    right: 15px;
+    z-index: 1;
+    border: 1px solid #000;
+    display: flex;
+    border-radius: 100%;
 }
 
 .CSS_메인오른쪽_중간 {
@@ -216,14 +247,14 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
-    letter-spacing: -0.14px;
+    letter-spacing: -0.1408px;
 }
 
 .CSS_내용 {
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
-    letter-spacing: -0.14px;
+    letter-spacing: -0.1408px;
 }
 
 .CSS_제목인풋 {
@@ -253,6 +284,7 @@
     border: none;
 }
 
+/* 푸터 */
 .CSS_푸터 {
     top: 160px;
     width: 100%;
@@ -271,7 +303,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: 24px; /* 109.091% */
-    letter-spacing: -0.22px;
+    letter-spacing: -0.2208px;
     border-bottom: 2px solid #000;
     width: 1168px;
     padding-bottom: 12px;
@@ -303,7 +335,7 @@
     font-size: 14px;
     font-weight: 300;
     line-height: 16px;
-    letter-spacing: -0.14px;
+    letter-spacing: -0.1408px;
 }
 
 /* DETAIL */
@@ -334,7 +366,62 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: 16px 0 24px 0;
 }
 
 .CSS_감정상자 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.CSS_감정사진들어가는곳 {
+    width: 32px;
+    height: 32px;
+}
+
+.CSS_회고글자 {
+    color: #000;
+    font-family: 'Pretendard Variable';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 133.333% */
+    letter-spacing: -0.18px;
+    padding-bottom: 13px;
+}
+
+.CSS_회고인풋 {
+    width: 100%;
+    border-radius: 8px;
+    border: 1px solid var(--Gray-Gray-200, #d4d3d3);
+    background: var(--Gray-W, #fff);
+    padding: 12px 16px;
+}
+
+.CSS_회고상자 {
+    margin-top: 20px;
+    padding-top: 30px;
+    width: 1168px;
+    height: 500px;
+    border-top: 2px solid #000;
+    /* background-color: red; */
+}
+
+.CSS_회고인풋상자 {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    margin-bottom: 16px;
+}
+
+.CSS_회고입력버튼 {
+    /* display: flex; */
+    width: 51px;
+    height: 48px;
+    padding: 8px 10px;
+    gap: 10px;
+    border-radius: 8px;
+    background: var(--Gray-B, #000);
+    color: #fff;
 }
