[240910] section08 필터링기능수정, 검색기능완료

--- a/homework/section8/css/index.css
+++ b/homework/section8/css/index.css
@@ -49,14 +49,17 @@ body {
 }
 
 .필터_박스 {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 16px;
   margin-bottom: 2.625rem;
+  z-index: 1;
 }
 
 .필터박스와_서치바 {
+  height: 48px;
   display: flex;
   gap: 16px;
 }
