--- a/homework/section8/css/dropdown.css
+++ b/homework/section8/css/dropdown.css
@@ -1,18 +1,14 @@
-.드롭다운_박스 {
-  gap: 16px;
-}
-
 .드롭다운_제목 {
   /* 원래 모습 안보이게 */
   appearance: none;
   display: flex;
   min-width: 120px;
   padding: 12px 10px;
-  gap: 10px;
   border-radius: 8px;
   border: 1px solid var(--Gray-Gray-300, #C7C7C7);
   background: var(--Gray-W, #FFF);
-
+  background: url(../images/드롭다운.png) no-repeat right center;
+  margin-bottom: 10px;
   /* 다이렉트로 쉽게 바꿀 수 없음 style.cssText 로 바꿔주기! */
   --필터선택변수: "전체"
 }
@@ -23,7 +19,6 @@
 
 .드롭다운_제목:checked+.드롭다운_메뉴 {
   display: block;
-  background: rgba(58, 181, 15, 0.05);
 }
 
 .드롭다운_메뉴 {
@@ -31,12 +26,16 @@
   width: 120px;
   min-width: 120px;
   border-radius: 10px;
-  border-radius: 8px;
+
   border: 1px solid var(--Gray-Gray-300, #C7C7C7);
   background: var(--Gray-W, #FFF);
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);
   /* 넘치는 모서리영역 숨겨주기 */
   overflow: hidden;
+}
+
+.드롭다운_메뉴 label:checked {
+  background-color: black;
 }
 
 .드롭다운_메뉴 input {
