🐛 fix: 일기 목록 깔끔하게 떨어지도록 스타일 수정

--- a/section08/css/common.css
+++ b/section08/css/common.css
@@ -401,7 +401,7 @@ body {
   max-width: 288px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   gap: var(--gap-sm);
 }
 
@@ -600,13 +600,14 @@ body {
     max-width: 100%;
   }
 
-  .panel-item {
-    min-width: 150px;
-  }
-
   .panel-list {
     display: inline-grid;
     grid-template-columns: 1fr 1fr;
+  }
+
+  .panel-item {
+    min-width: 150px;
+    width: 100%;
   }
 
   .side-panel {
